Infinite Heaven changelog
Just notable changes, see github commits for full

r261 - 
Fix: disableHerbSearch possibly not working correctly.
Fix: Randomize RouteSets being called despite individual options being off (though not if main setting was off).
thanks caplag for a related report.

Fix: "Custom soldier type in Free/Mission" resetting to off after game is next restarted - thanks Spectral for the report and troubleshooting files.

Fix: Some cases of Player Cam hook (FOV) not applying.

AroundCam (FreeCam):
When AroundCam on, but with Adjust-mode off, changing settings via will now update AroundCam.
Fix: hang if on when Abort mission.

API: addon missionInfo
clearExistingMissionStartSettings - only for use when overriding a vanilla mission, clears all the mission start data so the following options you set can work cleanly 
noBoxMissionHeliRoute / NO_ORDER_FIX_HELICOPTER_ROUTE support, requires isNoOrderBoxMission to be set

clearMissionStartHeliRoute is to give actual support for NO_HELICOPTER_ROUTE_MISSION_LIST, before it was just riding on the assumption that if the addon author gave a startPos they wouldn't have heli routes/starts set up, this gives the same support as the base game for those missions.

isNoOrderBoxMission, likewise giving explicit setting for NO_ORDER_BOX_MISSION

- thanks caplag for the suggestions

r260 - 2023-03-10
Fix: quest adding their missionPacks in helispace - thanks CapLag for an unrelated report that made me test something related.

Fix: Repop of sideop 144 tent_q99040 "Secure the Remains of the Man on Fire" arival on quarantine platform leaving player stuck in helipad.

Fix: Infinite load screen when IH startOnFoot used when force go to mb on quest clear > demo play. Another case of the prior fix in r259 for start on foot, which Repop of sideop 144 is also a case of. 

Fix: Several bugs setting quest flags incorrectly. Could result in some of the hidden/managed quests activating or not. 